2004-12-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tcl.m4, win/configure: update MSVC CFLAGS_OPT to -O2, remove
	-Gs (included in -O2) and -GD (outdated).  Use "link -lib" instead
	of "lib" binary and remove -YX for MSVC7 portability.  Add
	-fomit-frame-pointer for gcc OPT compiles. [Bug 1092952, 1091967]

2004-12-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/panedwindow.n: Fix silly typo. [Bug 1087842]

2004-12-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock):
	Added guards so that rescanning for the complex-alpha check is not
	done in the common case of creating a simple image a bit at a
	time, or any other time where the image was simple before and the
	input data has no alpha channel. [Bug 1081966]

2004-12-06  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.9 TAGGED FOR RELEASE ***

	* library/text.tcl (::tk::TextUpDownLine): revert 2004-11-23 as it
	prevented scrolling to bottom.

2004-12-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock):
	Make overlay compositing where the target is empty no longer set
	the target to magical gray, and also make sure that the
	complex-alpha flag is toggled when necessary. [Patch 848161]

2004-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes: updated for 8.4.9 release

2004-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixButton.c (TkpDisplayButton): constrain coords to
	Tk_RedrawImage to display only portion that is valid.
	* generic/tkImgPhoto.c (ImgPhotoDisplay): add X error suppression
	around XGetImage to prevent app abort. [Bug 979239]

2004-11-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:       Bumped patchlevel to 8.4.9
	* generic/tk.h:
	* macosx/Wish.pbproj/project.pbxproj:
	* unix/configure, unix/configure.in, unix/tk.spec:
	* win/configure, win/configure.in:

2004-11-23  Vince Darley <vincentdarley@users.sourceforge.net>
