@@ -1,3 +1,8 @@
+2005-01-03  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinWm.c (TkWinWmCleanup): clean up layered window class.
+	This caused crash in reinit of Tk (as seen in plugin).
+
 2004-12-29  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tcl.m4, win/configure: update MSVC CFLAGS_OPT to -O2, remove
